# hpcc-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  package-lock.json  package.json  vcpkg.json
dockerfiles/: native.dockerfile  wasm.dockerfile
fastly/: CMakeLists.txt
fastly/rust/: fastly.toml
fastly/ts/: .gitignore  Cargo.toml  fastly.toml  fastly.toml.sample  index.html  package-lock.json  package.json  tsconfig.json
fastly/ts/client/: app.tsx  index-old.ts  index.css  index.tsx  observable.tsx
fastly/ts/docs/: AI.md
fastly/ts/src/: index.html  index.ts  main.rs  sqlAgent.js  sqlAgent.ts
fastly/typescript/: .gitignore  CMakeLists.txt  fastly.toml  index.html  package-lock.json  package.json  tsconfig.json
fastly/typescript/src/client/: index.ts
fastly/typescript/src/server/: index.ts
guest/: CMakeLists.txt  edge.wit  test.wit
guest/AssemblyScript/: CMakeLists.txt  README.md  package-lock.json
guest/AssemblyScript/add/: package-lock.json  package.json
guest/AssemblyScript/add/tests/: index.js
guest/JavaScript/: CMakeLists.txt  package.json
guest/JavaScript/Javy/: package-lock.json  package.json
guest/JavaScript/componentize-js/: CMakeLists.txt  componentize.js  hello.js  hello.wit:Zone.Identifier  package-lock.json  package.json
guest/JavaScript/componentize-js/src/: index.js  main.rs
guest/JavaScript/src/: index.js
guest/assemblyscript/: CMakeLists.txt  asconfig.json  package-lock.json  package.json
guest/assemblyscript/assembly/: index.ts
guest/cpp/: CMakeLists.txt
guest/cpp/native/sieve/: CMakeLists.txt  main.cpp
guest/cpp/wasi-sdk/: CMakeLists.txt  README.md
guest/cpp/wasi-sdk/add/: CMakeLists.txt  main.cpp  main.hpp
guest/cpp/wasi-sdk/regression-test/: .gitignore  CMakeLists.txt  hpcc-scalar-test.wit  main.cpp  wasm_test.ecl  wasm_test.manifest
guest/cpp/wasi-sdk/scripts/: cpp-install-wasi-sdk.sh
guest/cpp/wasi-sdk/sieve/: CMakeLists.txt  main.cpp
guest/cpp/wasi-sdk/spin/: CMakeLists.txt  Dockerfile  main.cpp  main.wasm  package.json  spin.toml
guest/javascript/: CMakeLists.txt
guest/javascript/componentize-js/: CMakeLists.txt  package-lock.json  package.json
guest/javascript/componentize-js/add/: CMakeLists.txt  package-lock.json
guest/javascript/componentize-js/add/src/: index.js
guest/javascript/componentize-js/add/util/: componentize.mjs
guest/javascript/componentize-js/sieve/: CMakeLists.txt  package-lock.json
guest/javascript/componentize-js/sieve/src/: index.js
guest/javascript/componentize-js/sieve/util/: componentize.mjs
guest/javascript/componentize-js/util/: componentize.mjs
guest/javascript/javy/: CMakeLists.txt  package.json
guest/wit/: CMakeLists.txt
guest/wit/spin/: CMakeLists.txt  http-trigger.html  http-trigger.md  reactor.wit
host/cpp/: CMakeLists.txt
host/cpp/wamr/: CMakeLists.txt  README.md
host/cpp/wamr/main/: CMakeLists.txt  main.cpp
host/cpp/wamr/util/: CMakeLists.txt  reflect.cpp  reflect.hpp  wasmModule.cpp  wasmModule.hpp
host/cpp/wamr/vmlib/: CMakeLists.txt
host/cpp/wasmtime/: CMakeLists.txt
host/cpp/wasmtime/main/: CMakeLists.txt  main.cpp
scripts/: install-javy.sh  install-wasi-sdk.sh  install-wasmtime.sh  install-wit-bindgen.sh  install.sh
spin/docker-c/: main.c  package.json  stress.sh
spin/docker-ts/: Dockerfile  package-lock.json  package.json  spin.toml
tech-summit/demos/: bench.sh  test.sh
tech-summit/demos/hello-world/: build.sh
tech-summit/demos/hello-world/cpp/: .gitignore  CMakeLists.txt  build.sh  hello-world.c  hello-world.cpp  hello-world.cxx  hello-world.wat  list-dir.cpp
tech-summit/demos/hello-world/docker/: build.sh  hello-world-wasm.dockerfile  hello-world.dockerfile
tech-summit/demos/hello-world/js/: .gitignore  package-lock.json  package.json  tmp2.wat
tech-summit/demos/hello-world/js/hello/: hello.component.js
tech-summit/demos/hello-world/js/src/: hello.js
tech-summit/demos/hello-world/js/util/: componentize.mjs
tech-summit/demos/scripts/: install-wit-bindgen.sh
tech-summit/javy/: demo.sh  demo1.txt  demo2.txt  package-lock.json  package.json
tech-summit/javy/src/: index.js
tech-summit/javy/util/: componentize.mjs
tech-summit/javy/wit/: test.wit
tech-summit/llama2/: .gitignore  CMakeLists.txt  build.sh  commands.txt  demo1.txt  demo2.txt  native.dockerfile  package-lock.json  package.json  wasm.dockerfile
tech-summit/webserver/: demo.sh  demo1.txt  demo2.txt  demo3.txt  express.dockerfile  package-lock.json  package.json  random  spin.dockerfile  spin.sig
tech-summit/webserver/src/: express.ts  spin.ts
tech-summit/zzz-test/docker-ts/: Dockerfile  package-lock.json  package.json
tech-summit/zzz-test/docker-ts/src/: index.ts
tech-summit/zzz-test/nodejs-express/: package-lock.json  package.json
tech-summit/zzz-test/spin-docker-c/: Dockerfile  package.json  spin.toml
tech-summit/zzz-test/spin-docker-js/: Dockerfile  package-lock.json  package.json  spin.toml
tech-summit/zzz-test/spin-docker-php/: spin.toml
tech-summit/zzz-test/spin-docker-python/: Dockerfile  package.json  spin.toml
tech-summit/zzz-test/spin-docker-rust/: Cargo.toml  Dockerfile  spin.toml
tech-summit/zzz-test/spin-docker-rust/src/: lib.rs
tech-summit/zzz-test/spin-docker-serverless/: Dockerfile  package-lock.json  package.json  spin.toml
tech-summit/zzz-test/spin-docker-ts/: crt.pem  package.json  spin.toml  tsconfig.json
tech-summit/zzz-test/spin-docker-ts/src/: express.ts  spin.ts
tech-summit/zzz-test/spin-ts/: Dockerfile  package-lock.json  package.json  spin.toml
tech-summit/zzz-test/spin-ts/src/: index.ts
vcpkg_overlays/llama/: portfile.cmake  vcpkg.json
vcpkg_overlays/wasi-sdk/: portfile.cmake  vcpkg.json
vcpkg_overlays/wasmtime-c-api/: portfile.cmake  vcpkg.json
vcpkg_overlays/wasmtime-cpp-api/: portfile.cmake  vcpkg.json
vcpkg_overlays/wit-bindgen/: portfile.cmake  vcpkg.json
vcpkg_triplets/: wasi-sdk-pthread.cmake  wasi-sdk.cmake  wasm32-wasi-sdk.cmake
